# lspace

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  TODO.txt  clean-data.sh  engine.go  example.txt  fmt.sh  lspace.cabal  lspace.go  lspace.lnk  lspace.prof  main.go  notes.txt  run-profiling.sh  solution.txt  stack.yaml  stage.go  stage_game.go  stage_menu.go  utils.go
client/: CMakeLists.txt  main.go
client/android/: AndroidManifest.xml
client/android/jni/: SDL  SDL_image
client/android/jni/src/: Android.mk
client/android/res/values/: strings.xml
client/android/src/org/libsdl/app/: SDLActivity.java
client/doc/: 01-naming.txt  01-vector_math_kind.txt  02-modules.txt  02-vector_math_addition.txt  03-vector_math_negation.txt
client/include/: camera.h  cell.h  chunk.h  coord.h  gfx.h  hashmap.h  layer.h  main.h  main.hpp  renderer.h  size.h  tile.h  window.h  window.hpp  world.h
client/src/: camera.c  cell.c  coord.c  gfx.c  hashmap.c  main.c  main.cpp  renderer.c  window.cpp  world.c
client/tests/: CMakeLists.txt  test_hashmap.c
common/: CMakeLists.txt
common/include/: entity.h  general.h  general.hpp
common/lib/: CMakeLists.txt  SDL_image.cmake
common/src/: example.c  example.cpp
data/: 1.json
data/demo/: 0.json  1.json  2.json  3.json  4.json  5.json  game.json
dispatch/: main.go
doc/: 01_file_structure.txt
doc/code/: 01_file_structure.txt  02_coding_style.txt  03_entry_point.txt  04_stages.txt
doc/gameplay/: 01_game_menu.txt
include/: config.h  engine.h  extra.h  main.h  renderer.h  stage.h  stage_game.h  stage_menu.h  utils.h
kawaii/: Kawaii.hs  kawaii.cabal
kawaii/Kawaii/: Assets.hs  Camera.hs  Core.hs  Direction.hs  Event.hs  FFI.hs  Game.hs  Keyboard.hs  Mixer.hs  Renderer.hs  Stage.hs  Ui.hs  Updater.hs
kawaii/src/: Kawaii.hs
launcher/: CMakeLists.txt  main.go
launcher/include/: list.h  main.h
launcher/src/: list.c  main.c
legacy/: Cache.hs  Coordinate.hs  Main.hs  Object.hs  Region.hs  Relational.hs  Sprite.hs  Ui.hs
legacy/Ui/: Menu.hs
legacy/data/demo/: 3.json  4.json
legacy/kawaii/: kawaii.cabal  stack.yaml
legacy/kawaii/src/Kawaii/: Engine.hs
lspace/: LICENSE  Main.hs  gen-haddock.sh  lspace.cabal  lspace.go
relational/: Relational.hs  relational.cabal
relational/Relational/: Core.hs  Store.hs  Types.hs
relational/Relational/Store/: Disk.hs  Memory.hs
relational/tests/: Main.hs
server/: CMakeLists.txt  main.go
server/include/: main.h  main.hpp
server/src/: main.c  main.cpp
src/: Assoc.hs  Bimap.hs  Cache.hs  Camera.hs  Chunk.hs  Coordinate.hs  Core.hs  Demo.hs  Engine.hs  Environment.hs  Game.hs  Grid.hs  Kawaii.hs  Link.hs  Main.hs  Message.hs  Object.hs  Region.hs  Relation.hs  Relational.hs  Renderer.hs  Ship.hs  Sprite.hs  Tile.hs  Ui.hs  World.hs  engine.c  main.c  renderer.c  stage.c  stage_game.c  stage_menu.c
src/Kawaii/: Assets.hs  Core.hs  Game.hs  Mixer.hs  Renderer.hs  Ui.hs
src/Legacy/: Engine.hs  Environment.hs  Renderer.hs
src/Object/: Box.hs  Door.hs  Floor.hs  Plant.hs  Player.hs  Wall.hs
src/Relational/: Core.hs  Store.hs
src/System/: Message.hs  Movement.hs  World.hs
src/Types/: Cache.hs  Coordinate.hs  Environment.hs  Game.hs  Id.hs  Link.hs  Message.hs  Object.hs  Relation.hs  Renderer.hs  Ship.hs  Sprite.hs  Ui.hs  World.hs
src/Ui/: Menu.hs
