name:                lspace
version:             0.0.0.5
synopsis:            Lonesome Space
description:         Real-time 2D strategy/sandbox game.
homepage:            https://github.com/nitrix/lspace
license:             MIT
license-file:        LICENSE
author:              Alex Belanger
maintainer:          i.caught.air@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/nitrix/lspace

executable lspace
  main-is:             Main.hs
  build-depends:       aeson         >= 0.11.2.0 && < 0.11.3.0
                     , async         >= 2.1.0    && < 2.2.0
                     , base          >= 4.8      && < 4.10
                     , bytestring    >= 0.10.6   && < 0.11.0
                     , bifunctors    >= 5.2      && < 5.5
                     , containers    >= 0.5.6.2  && < 0.5.7.2
                     , directory     >= 1.2.2.0  && < 1.2.7.0
                     , lens          >= 4.12.3   && < 4.14.0
                     , linear        >= 1.19.1.3 && < 1.21.0
                     , lrucache      >= 1.2.0.0  && < 1.2.1.0
                     , mtl           >= 2.2.1    && < 2.3.0
                     , random        >= 1.1      && < 1.2
                     , sdl2          >= 2.1.0    && < 2.2.0
                     , sdl2-image    >= 0.2      && < 0.3
                     , sdl2-ttf      >= 1.0.0    && < 1.1.0
                     , text          >= 1.2.1.3  && < 1.2.3.0
                     , transformers  >= 0.5.2.0  && < 0.5.3.0
                     , vector        >= 0.11.0   && < 0.12.0
                     , SafeSemaphore >= 0.10.1   && < 0.11.0
                     , StateVar      >= 1.1.0.0  && < 1.1.1.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  extra-libraries:     SDL2_image
  ghc-options:         -Wall -threaded -with-rtsopts=-T
  -- ghc-options:         -threaded -with-rtsopts=-T -O -ddump-simpl -ddump-to-file -dsuppress-all
  -- other-modules:  --   Cache
                     -- , Camera
                     -- , Coordinate
                     -- , Engine
                     -- , Environment
                     -- , Game
                     -- , Grid
                     -- , LegacyMain
                     -- , Link
                     -- , Object
                     -- , Region
                     -- , Renderer
                     -- , Sprite
                     -- , Ui
                     -- , Ui.Menu
                     -- , World
