name:                kawaii
version:             0.0.0.1
synopsis:            Kawaii Game Engine
homepage:            https://github.com/nitrix/lspace
author:              Alex Belanger
maintainer:          i.caught.air@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base          >= 4.8     && < 4.10
                     , containers    >= 0.5.7.1 && < 0.5.8.0
                     , directory     >= 1.2.6.2 && < 1.3.2.0
                     , monad-loops   >= 0.4.3   && < 0.5.0
                     , mtl           >= 2.2.1   && < 2.3.0
                     , sdl2          >= 2.1.3   && < 2.2.0
                     , sdl2-image    >= 2.0.0   && < 2.1.0
                     , sdl2-ttf      >= 1.0.0   && < 1.1.0
                     , sdl2-mixer    >= 0.1     && < 0.2
                     , SafeSemaphore >= 0.10.1  && < 0.11.0
                     , text          >= 1.2.2.1 && < 1.2.3.0
  default-language:    Haskell2010
  exposed-modules:     Kawaii
  other-modules:       Kawaii.Assets
                     , Kawaii.Core
                     , Kawaii.Event
                     , Kawaii.FFI
                     , Kawaii.Game
                     , Kawaii.Keyboard
                     , Kawaii.Mixer
                     , Kawaii.Renderer
                     , Kawaii.Ui