name:                relational
version:             0.0.0.1
synopsis:            Relational Data
homepage:            https://github.com/nitrix/lspace
author:              Alex Belanger
maintainer:          i.caught.air@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       aeson         >= 0.11.1.0 && < 0.11.4.0
                     , base          >= 4.8      && < 4.10
                     , bytestring    >= 0.10.8.1 && < 0.10.9.0
                     , containers    >= 0.5.7.1  && < 0.5.8.0
                     , fclabels      >= 2.0.3.2  && < 2.0.4.0
  default-language:    Haskell2010
  exposed-modules:     Relational